<resources>
    <string name="app_name">TOPUP NFC BUS</string>
    <string name="jumlah1">Rp. 5.000,00</string>
    <string name="jumlah2">Rp. 10.000,00</string>
    <string name="jumlah3">Rp. 15.000,00</string>
    <string name="jumlah4">Rp. 20.000,00</string>
    <string name="jumlah5">Rp. 50.000,00</string>
    <string name="jumlah6">Rp. 100.000,00</string>
    <string name="message_write_error">Penambahan Gagal !</string>
    <string name="message_write_success">Penambahan Berhasil !</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Terdeteksi !</string>
    <string name="message_read_tag">Read from NFC Tag</string>
    <string name="message_write_tag">Write to NFC Tag</string>
    <string name="message_tap_tag">Silahkan Tap Kartu Anda !</string>
    <string name="hint_message">Message</string>
</resources>
